Fix recipe cards alignment

--- a/src/sass/components/_recipes-grid.scss
+++ b/src/sass/components/_recipes-grid.scss
@@ -6,6 +6,11 @@
   justify-content: space-between;
 }
 
+.recipes-grid__container:after {
+  content: "";
+  flex: auto;
+}
+
 .recipe-card {
   position: relative;
 
